<?xml version="1.0"?>
<package>
  <name>bwi_rl</name>
  <version>0.0.1</version>
  <description>Samuel Barrett's RL code</description>

  <license>BSD</license>

  <author email="thesambarrett@gmail.com">Samuel Barrett</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bwi_tools</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>bwi_tools</run_depend>
  <run_depend>pluginlib</run_depend>

</package>

